# talent-flow-api

./: .env.example  README.md  main.py  pyproject.toml
.github/workflows/: python-tests.yml
.junie/: guidelines.md
app/: config.py  main.py  models.py  utils.py
app/ml/: traning.py
app/services/: prediction_service.py
docs/: requirements.md  tasks.md
ml/: talent_flow_classifier.pkl  talent_flow_preprocessors.pkl
tests/: conftest.py  test_api.py
